homepage/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.services.sbling.net`)
      kind: Rule
      middlewares:
        - name: oidc-middleware
          namespace: homepage
      services:
        - kind: Service
          name: homepage
          port: 3000
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: homepage-services-sbling-net-prod-cert
